<resources>
    <string name="app_name">PAM_DOSEN_TUGAS 2</string>
    <string name="switch_string">Night Mode</string>

    <string name="btn_rifle_string">Rifles</string>
    <string name="btn_sniper_string">Snipers</string>
    <string name="btn_pistol_string">Pistols</string>
    <string name="btn_grenade_string">Grenades</string>

    <string name="txt_weapon_chooser_string">Weapons</string>
    <string name="txt_title_string">CS:GO</string>

    <!-- Descriptions -->
    <string name="desc_default"> </string>
    <string name="desc_awp">The Accuracy International Arctic Warfare series is a series of sniper rifles manufactured by Accuracy International of United Kingdom. The Arctic Warfare Police (AWP) is the law enforcement variant of the series, commonly chambered for 7.62×51mm NATO. The Magnum Sniper Rifle depicted in Counter-Strike is based on the Arctic Warfare Magnum, chambered for .338 Lapua Magnum. The AWP in Global Offensive is based off the original Arctic Warfare</string>
    <string name="desc_ssg08">The Steyr SSG 08 (German: Scharfschützengewehr 2008, English: Sniper Rifle 08) is an Austrian-made bolt-action sniper rifle. In-game, the SSG 08 is a cheap sniper rifle option available to both teams at $1700, fulfilling the same role as the Steyr Scout in previous games. It holds 10 rounds per magazine and has a very large reserve capacity at 90 rounds</string>

    <string name="desc_ak47">The AK-47 is a select-fire, gas-operated 7.62×39mm assault rifle developed in the Soviet Union by Mikhail Kalashnikov. The first weapon in the AK (Avtomat Kalashnikova, Russian: Автомат Калашникова, Kalashnikov assault rifle) family of weapons, the AK-47 is succeeded by the modernized AKM in 1959, and the AK-74 in 1974. AK variants were adopted by many forces around the world and saw use in almost every conflict since its development. The AK-47 in Global Offensive is modeled after the AKM</string>
    <string name="desc_m4a4">The M4A4 is based on the Mk. 18 Mod 0 carbine, fitted with an ARMS#40 flip-up rear iron sight and KAC free-float RAS handguard</string>

    <string name="desc_usps">The USP (Universale Selbstladepistole or "universal self-loading pistol") is a semi-automatic pistol developed in Germany by Heckler and Koch GmbH (H and K) of Oberndorf am Neckar as a replacement for the P7 series of handguns. In Counter-Strike: Global Offensive, like its predecessor, the USP pistol is the USP Tactical variant of the default USP. The -S represents the silencer</string>
    <string name="desc_p250">The SIG Sauer P250 is a semi-automatic pistol manufactured by SIG Sauer of New Hampshire, designed with a modular format in mind. First introduced to the market in 2007, it is not widely distributed as orders for the pistol were cancelled in some countries. The in-game weapon is modeled after an early model P250 Compact variant</string>

    <string name="desc_he">The HE Grenade is essentially a capsule filled with explosives that will detonate on a timed fuse after being thrown. After being thrown, the grenade detonates after a timed fuse expires, creating a small, loud explosion and dealing instantaneous damage to enemies in an area, which drops down as their distance to the grenade increases. In Counter-Strike, the explosion damage can penetrate through walls. This is removed in later games and players will not be damaged if the explosion is blocked by a wall</string>
    <string name="desc_smoke">Smoke grenades are grenades containing smoke composition (such as potassium chlorate and lactose) that releases clouds of smoke. In the Counter-Strike series, they are tactical tools that can be used to provide smoke screen cover, confuse the enemy, or hinder enemy visibility and discouraging them from attacking</string>

</resources>
